<resources>
    <string name="app_name">SnapGram</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="email_error">Invalid email format.</string>
    <string name="password_error">Password must at least 8 chars.</string>
    <string name="password_confirmation_hint">Confirm Password</string>
    <string name="name">Name</string>
    <string name="name_error">Name musn\'t be empty!</string>
    <string name="form_error">Form must be filled correctly.</string>
    <string name="login_title">Hello Again!</string>
    <string name="login_intro">Welcome back you\'ve been missed!</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="register_intro">Connect your infinity world!</string>
    <string name="add_new_story">Add New Story</string>
    <string name="home">Home</string>
    <string name="story_maps">Story Maps</string>
    <string name="language">Language</string>
    <string name="story_image">Story Image</string>
    <string name="story_name">Story Name</string>
    <string name="others">…Others</string>
    <string name="add_description">Add the descriptions…</string>
    <string name="close_upload_page">Close Upload Page</string>
    <string name="upload_your_story">Upload Your Story</string>
    <string name="sign_out">Sign Out</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">No Data</string>
    <string name="close_camera">Close Camera</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="flip_to_front_camera">Flip to Front Camera</string>
    <string name="pick_gallery">Pick a photo from gallery</string>
    <string name="access_denied">Access Denied</string>
    <string name="taking_photo_failed">Failed to take a photo</string>
    <string name="open_camera_failed">Failed to open camera.</string>
    <string name="register_question">"Don't have an account? "</string>
    <string name="password_must_same">Password must be the same.</string>
    <string name="sign_in_question">"Already have an account? "</string>
    <string name="sign_in_first">You have to sign in first!</string>
    <string name="empty">No Data Story</string>
    <string name="data_empty">Data cannot be empty</string>
    <string name="retry">Try again</string>
    <string name="scroll_to_top">Scroll to Top</string>
    <string name="location">Location</string>
    <string name="location_not_found_error">Location not found.</string>
    <string name="gps_error">You must turn on the GPS!</string>
    <string name="wait">Wait…</string>
</resources>